# Cadabrio

./: .gitattributes  .gitignore  ATTRIBUTIONS.md  CLAUDE.md  Cadabrio.code-workspace  LICENSE  README.md  environment.yml  pyproject.toml  run.py
scripts/: setup_env.bat  setup_env.sh
src/cadabrio/: __init__.py  __main__.py  version.py
src/cadabrio/ai/: __init__.py  engine.py  inference.py  model_manager.py  pipelines.py  prompt_enhance.py  reference_images.py
src/cadabrio/config/: __init__.py  defaults.py  manager.py
src/cadabrio/config/themes/: __init__.py  cadabrio_dark.json  theme_manager.py
src/cadabrio/core/: __init__.py  logging.py  pipeline.py  project.py  scale_manager.py
src/cadabrio/exporters/: __init__.py  formats.py
src/cadabrio/importers/: __init__.py  image.py  model_3d.py  text.py  video.py
src/cadabrio/integrations/: __init__.py  bambu_studio.py  blender.py  freecad.py  unreal.py
src/cadabrio/photogrammetry/: __init__.py  pipeline.py
src/cadabrio/ui/: __init__.py  main_window.py  splash_screen.py
src/cadabrio/ui/panels/: __init__.py  asset_browser.py  chat_console.py  config_editor.py  resource_monitor.py  viewport_3d.py
src/cadabrio/ui/widgets/: __init__.py  ai_tools_dialog.py  model_manager_dialog.py  theme_editor.py
tests/: conftest.py  test_config.py  test_core.py  test_version.py
