[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadabrio"
version = "0.3.0"
description = "AI-powered, locally-run 3D creation platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Lee Gillie, CCP"},
    {name = "Claude (Anthropic AI)", email = "noreply@anthropic.com"},
]
keywords = ["3d", "ai", "photogrammetry", "blender", "freecad", "unreal-engine", "bambu-studio"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "PySide6>=6.7",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "Pillow>=10.0",
    "trimesh>=4.0",
    "pygltflib>=1.16",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "loguru>=0.7",
    "psutil>=5.9",
    "nvidia-ml-py>=12.0",
    "PyOpenGL>=3.1",
    "PyOpenGL-accelerate>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "pytest-cov>=4.1",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
cadabrio = "cadabrio.__main__:main"

[project.gui-scripts]
cadabrio-gui = "cadabrio.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
